--- a/Automação_limpeza.ipynb
+++ b/Automação_limpeza.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4ZlP3iIDO+2t1NCzvUYMy"
+      "authorship_tag": "ABX9TyOt0e5lzJoyOF4Udan3LvNv"
     },
     "kernelspec": {
       "name": "python3",
@@ -22,7 +22,81 @@
         "id": "o5xCKiVIv7f0"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "#1. Criar o Script de Limpeza\n",
+        "#Abra um editor de texto (como nano ou gedit) e crie um novo arquivo, por exemplo, limpeza_automatica.sh.\n",
+        "\n",
+        "nano limpeza_automatica.sh\n",
+        "#Cole o seguinte conteúdo no arquivo:\n",
+        "\n",
+        "#!/bin/bash\n",
+        "\n",
+        "# Script para limpeza automática do sistema Linux\n",
+        "\n",
+        "echo \"Iniciando limpeza do sistema...\"\n",
+        "\n",
+        "# 1. Limpar cache de pacotes APT\n",
+        "echo \"Limpando cache de pacotes APT...\"\n",
+        "sudo apt clean\n",
+        "\n",
+        "# 2. Remover pacotes órfãos/não utilizados APT\n",
+        "echo \"Removendo pacotes órfãos...\"\n",
+        "sudo apt autoremove -y\n",
+        "\n",
+        "# 3. Limpar cache de miniaturas do usuário\n",
+        "echo \"Limpando cache de miniaturas...\"\n",
+        "rm -rf ~/.cache/thumbnails/*\n",
+        "\n",
+        "# 4. Limpar arquivos temporários do sistema\n",
+        "echo \"Limpando arquivos temporários em /tmp...\"\n",
+        "sudo rm -rf /tmp/*\n",
+        "\n",
+        "# 5. Limpar logs compactados antigos (opcional, cuidado)\n",
+        "echo \"Limpando logs compactados antigos...\"\n",
+        "sudo find /var/log -type f -name \"*.gz\" -delete\n",
+        "\n",
+        "echo \"Limpeza concluída!\"\n",
+        "    • #!/bin/bash: Linha \"shebang\" que indica qual interpretador deve ser usado para executar o script (neste caso, Bash).\n",
+        "    • echo \"...\": Exibe mensagens no terminal para indicar o progresso.\n",
+        "    • -y (em sudo apt autoremove -y): Responde \"sim\" automaticamente a quaisquer prompts de confirmação, o que é útil para automação.\n",
+        "Salve e feche o arquivo (Ctrl+O, Enter, Ctrl+X no nano).\n",
+        "2. Dar Permissão de Execução ao Script\n",
+        "Torne o script executável:\n",
+        "Bash\n",
+        "chmod +x limpeza_automatica.sh\n",
+        "    • chmod: Comando para mudar as permissões de arquivos.\n",
+        "    • +x: Adiciona permissão de execução ao arquivo.\n",
+        "3. Testar o Script\n",
+        "Execute o script manualmente para garantir que ele funciona como esperado:\n",
+        "Bash\n",
+        "./limpeza_automatica.sh\n",
+        "Ele pedirá sua senha sudo.\n",
+        "\n",
+        "Agendando a Limpeza com Cron\n",
+        "cron é um agendador de tarefas em sistemas Linux. Você pode usá-lo para executar seu script em intervalos regulares.\n",
+        "1. Editar o Crontab\n",
+        "Para agendar uma tarefa para o usuário atual, use:\n",
+        "Bash\n",
+        "crontab -e\n",
+        "    • crontab -e: Abre o arquivo crontab do usuário atual em um editor de texto. Se for a primeira vez, ele pode perguntar qual editor usar (escolha nano para simplicidade, se oferecido).\n",
+        "2. Adicionar a Entrada Cron\n",
+        "Adicione a seguinte linha no final do arquivo crontab:\n",
+        "0 3 * * 0 /home/SEU_USUARIO/limpeza_automatica.sh > /dev/null 2>&1\n",
+        "Substitua /home/SEU_USUARIO/limpeza_automatica.sh pelo caminho completo para o seu script. Para descobrir o caminho completo, você pode usar pwd onde salvou o script.\n",
+        "    • 0 3 * * 0: Esta é a parte do agendamento cron:\n",
+        "        ◦ 0: Minuto (0 a 59). Aqui, às 0 minutos.\n",
+        "        ◦ 3: Hora (0 a 23). Aqui, às 3 da manhã.\n",
+        "        ◦ *: Dia do mês (1 a 31). * significa \"todo dia\".\n",
+        "        ◦ *: Mês (1 a 12). * significa \"todo mês\".\n",
+        "        ◦ 0: Dia da semana (0 para domingo, 1 para segunda, etc.). 0 significa \"todo domingo\".\n",
+        "        ◦ Com esta configuração, o script será executado todo domingo às 3:00 da manhã.\n",
+        "    • /home/SEU_USUARIO/limpeza_automatica.sh: O caminho completo para o seu script.\n",
+        "    • > /dev/null 2>&1: Isso redireciona a saída (tanto a saída padrão quanto os erros) do script para /dev/null, o que significa que você não receberá e-mails com a saída do script toda vez que ele rodar. É bom para scripts que não precisam de interação ou feedback visual.\n",
+        "Salve e feche o arquivo (Ctrl+O, Enter, Ctrl+X no nano).\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
     }
   ]
 }
