foi feito formatação

--- a/Gestão de Projetos de Automação e IA.ipynb
+++ b/Gestão de Projetos de Automação e IA.ipynb
@@ -109,13 +109,13 @@
    "id": "ecd0171f",
    "metadata": {},
    "source": [
-    "#Baixa a imagem mais recente do n8n.\n",
+    "Baixa a imagem mais recente do n8n.\n",
     "docker pull n8n/n8n     \n",
     "\n",
-    "#Inicia o n8n em um contêiner Docker (-v mapeia um volume para persistir seus dados)\n",
+    "Inicia o n8n em um contêiner Docker (-v mapeia um volume para persistir seus dados)\n",
     "docker run -it --rm --name n8n -p 5678:5678 -v ~/.n8n:/home/node/.n8n n8n/n8n               \n",
     "\n",
-    "#Para usar o n8n via interface web, acesse no seu navegador\n",
+    "Para usar o n8n via interface web, acesse no seu navegador\n",
     "http://localhost:5678"
    ]
   },
@@ -133,6 +133,7 @@
    "metadata": {},
    "source": [
     "Objetivo: Quando um novo cliente compra um produto digital, ele deve ser adicionado a uma plataforma de  \"Automação de marketing e CRM\", receber um e-mail de boas-vindas personalizado e ter seus dados registrados em um \"banco de dados (BD)\" para análise.\n",
+    "\n",
     "Ferramentas: Hotmart (ou similar - Plataforma de Checkout) Webhook, n8n, ActiveCampaign, Supabase."
    ]
   },
@@ -150,6 +151,7 @@
    "metadata": {},
    "source": [
     "Objetivo: Criar um Agente de IA que possa responder a perguntas frequentes de clientes, utilizando uma base de conhecimento (armazenada no BD) e, se não encontrar a resposta, encaminhar para um atendimento humano via e-mail.\n",
+    "\n",
     "Ferramentas: n8n, Supabase (para base de conhecimento), um serviço de LLM (Large Language Model) como OpenAI GPT (via API), nó de e-mail (SMTP)."
    ]
   },
@@ -166,7 +168,8 @@
    "id": "e90af5cf",
    "metadata": {},
    "source": [
-    "Objetivo: Manter o Banco de Dados atualizado com os dados de contatos do CRM (ex: ActiveCampaign) e, vice-versa, garantir que novos registros no BD sejam refletidos no CRM.\n",
+    "Objetivo: Manter o Banco de Dados atualizado com os dados de contatos do CRM e, vice-versa, garantir que novos registros no BD sejam refletidos no CRM.\n",
+    "\n",
     "Ferramentas: n8n, ActiveCampaign, Supabase."
    ]
   },
@@ -185,8 +188,9 @@
    "source": [
     "Objetivo: Processar reembolsos, remover tags do CRM e registrar o evento em um log específico.\n",
     "Dados Envolvidos:\n",
+    "\n",
     "Webhook de Reembolso (Plataforma de Checkout)\n",
-    "Dados de Clientes e Leads (ActiveCampaign)\n",
+    "Dados de Clientes e Leads (Plataforma de Marketing)\n",
     "Base de Dados de Logs (BD)"
    ]
   },
@@ -195,7 +199,7 @@
    "id": "834ceb43",
    "metadata": {},
    "source": [
-    "# Cenário: Automação de Gestão de Reembolsos"
+    "# Cenário 5: Automação de Gestão de Reembolsos"
    ]
   },
   {
@@ -205,9 +209,10 @@
    "source": [
     "Objetivo: Processar reembolsos, remover tags do CRM e registrar o evento em um log específico.\n",
     "Dados Envolvidos:\n",
+    "\n",
     "Webhook de Reembolso (Plataforma de Checkout)\n",
-    "Dados de Clientes e Leads (ActiveCampaign)\n",
-    "Base de Dados de Logs (Supabase)"
+    "Dados de Clientes e Leads (Plataforma de Marketing)\n",
+    "Base de Dados de Logs (BD)"
    ]
   },
   {
@@ -215,7 +220,7 @@
    "id": "fb0a7f40",
    "metadata": {},
    "source": [
-    "# Cenário: Sincronização de Contatos Bidirecional "
+    "# Cenário 6: Sincronização de Contatos Bidirecional "
    ]
   },
   {
@@ -225,8 +230,9 @@
    "source": [
     "Objetivo: Manter a tabela clientes no Supabase e os contatos do ActiveCampaign sincronizados, lidando com atualizações em ambas as direções.\n",
     "Dados Envolvidos:\n",
-    "Dados de Clientes e Leads (ActiveCampaign)\n",
-    "Base de Dados de Clientes (Supabase)"
+    "\n",
+    "Dados de Clientes e Leads (Plataforma de Marketing)\n",
+    "Base de Dados de Clientes (BD)"
    ]
   },
   {
@@ -234,7 +240,7 @@
    "id": "dd20b5e7",
    "metadata": {},
    "source": [
-    "# Cenário: Agente de Atendimento FAQ Simples"
+    "# Cenário 7: Agente de Atendimento FAQ Simples"
    ]
   },
   {
@@ -244,8 +250,9 @@
    "source": [
     "Objetivo: Criar um agente que responda perguntas frequentes usando uma base de conhecimento.\n",
     "Dados Envolvidos:\n",
+    "\n",
     "Perguntas do Usuário (simuladas via Webhook)\n",
-    "Base de Conhecimento (Supabase - tabela faq)"
+    "Base de Conhecimento (BD - tabela faq)"
    ]
   },
   {
@@ -253,7 +260,7 @@
    "id": "dbb35841",
    "metadata": {},
    "source": [
-    "# Cenário: Agente de Resumo de Artigos (Utilizando LLM)"
+    "# Cenário 8: Agente de Resumo de Artigos (Utilizando LLM)"
    ]
   },
   {
@@ -263,6 +270,7 @@
    "source": [
     "Objetivo: Criar um agente que, dada uma URL de artigo, retorne um resumo conciso.\n",
     "Dados Envolvidos:\n",
+    "\n",
     "URL de Artigo (simulado via Webhook)\n",
     "API de LLM (OpenAI - GPT)\n",
     "Tabela artigos (para armazenar artigos já resumidos)"
@@ -273,7 +281,7 @@
    "id": "f722525c",
    "metadata": {},
    "source": [
-    "# Cenário: Agente de Suporte de Nível 1 (Com Encaminhamento Inteligente)"
+    "# Cenário 9: Agente de Suporte de Nível 1 (Com Encaminhamento Inteligente)"
    ]
   },
   {
@@ -283,8 +291,9 @@
    "source": [
     "Objetivo: Criar um agente que tenta resolver problemas comuns e, se não conseguir, encaminha para o suporte humano com informações relevantes.\n",
     "Dados Envolvidos:\n",
+    "\n",
     "Descrição do Problema do Usuário (Webhook)\n",
-    "Base de Conhecimento (Supabase - faq e artigos)\n",
+    "Base de Conhecimento (BD - faq e artigos)\n",
     "API de LLM (OpenAI)\n",
     "E-mail para Equipe de Suporte (SMTP)"
    ]
@@ -294,7 +303,7 @@
    "id": "0601cb92",
    "metadata": {},
    "source": [
-    "# Cenário: Gestão de Feedback de Clientes e Acionamento de Vendas\n"
+    "# Cenário 10: Gestão de Feedback de Clientes e Acionamento de Vendas\n"
    ]
   },
   {
@@ -304,9 +313,10 @@
    "source": [
     "Objetivo: Processar o feedback de clientes, identificar clientes \"muito satisfeitos\" e aqueles interessados em novos cursos de IA, e acionar a equipe de vendas ou marketing.\n",
     "Dados Envolvidos:\n",
+    "\n",
     "Webhook de Feedback de Cliente\n",
-    "CRM (ActiveCampaign)\n",
-    "Base de Dados de Clientes (Supabase)\n",
+    "CRM \n",
+    "Base de Dados de Clientes (BD)\n",
     "E-mail de Notificação (SMTP)"
    ]
   },
@@ -315,7 +325,7 @@
    "id": "793a35d4",
    "metadata": {},
    "source": [
-    "# Cenário: Monitoramento e Alerta de Estoque de Produtos Digitais"
+    "# Cenário 11: Monitoramento e Alerta de Estoque de Produtos Digitais"
    ]
   },
   {
@@ -325,9 +335,10 @@
    "source": [
     "Objetivo: Monitorar o estoque de licenças de produtos digitais e enviar alertas quando a quantidade de licenças disponíveis cair abaixo de um limite, além de desativar o produto automaticamente se o estoque chegar a zero.\n",
     "Dados Envolvidos:\n",
+    "\n",
     "Dados de Estoque de Produtos Digitais (simulado via CSV/JSON)\n",
     "E-mail de Alerta (SMTP)\n",
-    "Supabase (para registrar alertas/histórico)"
+    "BD (para registrar alertas/histórico)"
    ]
   },
   {
@@ -335,7 +346,7 @@
    "id": "c8b1f751",
    "metadata": {},
    "source": [
-    "# Cenário: Agente de Sugestão de Artigos de Conhecimento"
+    "# Cenário 12: Agente de Sugestão de Artigos de Conhecimento"
    ]
   },
   {
@@ -345,8 +356,9 @@
    "source": [
     "Objetivo: Dado um termo de busca, o agente deve sugerir artigos relevantes da base de conhecimento e, se a relevância for baixa, sugerir uma busca em outros lugares ou contato com o suporte.\n",
     "Dados Envolvidos:\n",
+    "\n",
     "Termo de Busca (Webhook)\n",
-    "Base de Conhecimento (Supabase - tabela artigos)\n",
+    "Base de Conhecimento (BD - tabela artigos)\n",
     "API de LLM (OpenAI - GPT, para refinar busca e resposta)"
    ]
   }
